--- a/configs/dat_small_panoptic.yaml
+++ b/configs/dat_small_panoptic.yaml
@@ -1,18 +1,18 @@
 MODEL:
   TYPE: dat
-  NAME: dat_base
+  NAME: dat_small
   DAT:
     img_size: 224
     patch_size: 4
     num_classes: 1
     expansion: 4
-    dim_stem: 128
-    dims: [128, 256, 512, 1024]
+    dim_stem: 96
+    dims: [96, 192, 384, 768]
     depths: [2, 2, 18, 2]
     stage_spec: [[L, S], [L, S], [L, D, L, D, L, D, L, D, L, D, L, D, L, D, L, D, L, D], [L, D]]
-    heads: [4, 8, 16, 32]
+    heads: [3, 6, 12, 24]
     window_sizes: [7, 7, 7, 7] 
-    groups: [-1, -1, 4, 8]
+    groups: [-1, -1, 3, 6]
     use_pes: [False, False, True, True]
     dwc_pes: [False, False, False, False]
     strides: [-1, -1, 1, 1]
@@ -24,7 +24,7 @@ MODEL:
     use_conv_patches: False
     drop_rate: 0.0
     attn_drop_rate: 0.0
-    drop_path_rate: 0.5
+    drop_path_rate: 0.3
     num_keypoints: 19
     aux_loss: false
     def_layers: 10
@@ -58,9 +58,9 @@ LOSS:
 
 TRAIN:
   EPOCHS: 300
-  WARMUP_EPOCHS: 50
-  CLIP_GRAD: 1.0
-  BASE_LR: 4e-4
+  WARMUP_EPOCHS: 20
+  BASE_LR: 5e-4
+  VAL_INTERVAL: 20
 
 DATA:
   BATCH_SIZE: 16
